Sign in page - fix spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -295,24 +295,27 @@ footer {
 #list { margin-bottom: 20px;}
 #list li {list-style-type: none; margin: 20px 10px; display: inline-block;}
 
+#sign_together {
+  padding-bottom: 50px;
+}
 
 #sign_together .left_half, #sign_together .right_half {
   float: right;
-  width: 420px;
+  width: 440px;
   padding: 0 60px;
   margin: 10px 0;
 }
 
 #sign_together .left_half {
-  border-left: 1px solid #839ba7;
+  border-left: 1px solid #dbe7ed;
 }
 
 #sign_together label {
-  width: 120px;
+  width: 125px;
 }
 
 #sign_together input {
-  width: 175px;
+  width: 190px;
 }
 
 #sign_together #sign_in_reason {
@@ -324,7 +327,7 @@ footer {
 }
 
 #sign_together .form_checkbox label {
-  width: 280px;
+  width: 290px;
   font-weight: normal;
 }
 
@@ -334,4 +337,10 @@ footer {
 
 #sign_together .form_button input {
   width: 120px;
+  margin-top: 9px;
+}
+
+.g-recaptcha {
+  float: right;
+  margin-right: -1px;
 }
